--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -24,6 +24,9 @@
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "react-relay": "0.9.1",
+    "react-router": "2.4.1",
+    "react-router-relay": "0.13.2",
+    "relay-subscriptions": "0.3.0",
     "require-clean": "0.1.3",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
